# mobile_mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
acado/: .gitignore  CMakeLists.txt  mpc_test
acado/src/: mpc_acado.cpp  mpc_test.cpp
action/: mpc.action  simpleMpc.action
config/: boxer_only_params.yaml  default_params.yaml  mpc_params.yaml  mpc_planner.rviz  polyhedron.rviz  simpleMpc_params.yaml  simplempc.rviz  sphere_show.rviz
config/rviz/: mpc.rviz  mpc_planner.rviz  simplempc.rviz
forcesLib/: .gitignore  addCustomPaths.m
forcesLib/diffDrive/: .gitignore  diffDrive_nlp_setup.m  solveDiffDrive.m
forcesLib/diffDrive/diffDrive_MPC/: diffDrive_MPC.m
forcesLib/diffDrive/diffDrive_MPC/include/: diffDrive_MPC.h
forcesLib/diffDrive/functionsOptimization/: costFunction.m  obstacleAvoidance.m  transitionFunction.m
forcesLib/distanceFunctions/: contDotProduct.m  point2infplane.m  point2triangle.m
forcesLib/dumping/: runDumpedRosProblem.m
forcesLib/manipulatorOS/: .gitignore  functionHandle.mat  generateJacobian.m  mm_nlp_setup.m  mmrobot.urdf  panda.urdf  solveMM.m  solveMM.py  testFile.txt
forcesLib/manipulatorOS/dyn_model_panda/: get_Jacobian.m
forcesLib/manipulatorOS/functionsOptimization/: contDynamics.m  costFunctionOS.m  forwardKinematicsExp.m  func_getJacobian.m  obstacleAvoidanceOS.m  transitionFunctionOS.m
forcesLib/mobileManipulator/: .gitignore  checkCosts.m  mm_MPC.mexa64  mm_MPC_py.py  mm_nlp_setup.m  solveMM.m  solveMM.py  solveMMAcc.m  stdout_temp  testDistances.m
forcesLib/mobileManipulator/decomp_util/: .gitignore  mm_MPC.mexa64  mm_MPC_py.py  mm_nlp_setup.m  solveMM.m
forcesLib/mobileManipulator/distanceFunctions/: contCrossProduct.m  contMin.m  point2line.m  point2plane.m  point2point.m
forcesLib/mobileManipulator/functionsOptimization/: continousDynamicsSimple.m  costFunctionAcc.m  costFunctionSimple.m  costFunctionTorques.m  obstacleAvoidanceAcc.m  obstacleAvoidanceSimple.m  obstacleAvoidanceTorques.m  planeCollisionAvoidance.m  testCollisionPlane.m  transitionFunctionAcc.m  transitionFunctionSimple.m  transitionFunctionTorques.m
forcesLib/mobileManipulator/mm_MPC/: mm_MPC.m
forcesLib/mobileManipulator/static_spheres/: mm_nlp_setup.m  solveMM.m
forcesLib/optimizationFunctions/costFunctions/: costFunctionSimple_1.m  costFunctionSimple_12.m  costFunctionSimple_15.m  costFunctionSimple_5.m  costFunctionSimple_6.m  costFunctionSimple_7.m  costFunctionSimple_8.m
forcesLib/optimizationFunctions/dynamics/: transitionFunctionSimple.m
forcesLib/optimizationFunctions/ineqFunctions/: editFiles.sh  obstacleAvoidanceSimple_1.m  obstacleAvoidanceSimple_10.m  obstacleAvoidanceSimple_15.m  obstacleAvoidanceSimple_4.m  obstacleAvoidanceSimple_5.m  obstacleAvoidanceSimple_7.m  obstacleAvoidanceSimple_8.m  obstacleAvoidanceSimple_9.m  obstacleAvoidanceSphere_1.m  obstacleAvoidanceSphere_10.m  obstacleAvoidanceSphere_11.m  obstacleAvoidanceSphere_12.m  obstacleAvoidanceSphere_13.m  obstacleAvoidanceSphere_14.m  obstacleAvoidanceSphere_15.m  obstacleAvoidanceSphere_2.m  obstacleAvoidanceSphere_3.m  obstacleAvoidanceSphere_4.m  obstacleAvoidanceSphere_5.m  obstacleAvoidanceSphere_6.m  obstacleAvoidanceSphere_7.m  obstacleAvoidanceSphere_8.m  obstacleAvoidanceSphere_9.m
forcesLib/simpleMPC/: .gitignore  costFunctionSimple.m  createSimpleMpc.m  generatePMap.m  obstacleAvoidanceSimple.m  readCppDumpFile.m  runDumpedProblem.m  simplempc.m  simplempc_py.py  solveMM.m  transitionFunctionSimple.m  transitionFunctionSimple_1.m  transitionFunctionSimple_2.m
forcesLib/simpleMPC/costFunctions/: costFunctionSimple_10.m  costFunctionSimple_11.m  costFunctionSimple_13.m  costFunctionSimple_14.m  costFunctionSimple_2.m  costFunctionSimple_3.m  costFunctionSimple_4.m  costFunctionSimple_9.m  editFiles.sh
forcesLib/simpleMPC/ineqFunctions/: editFiles.sh  obstacleAvoidanceSimple_11.m  obstacleAvoidanceSimple_12.m  obstacleAvoidanceSimple_13.m  obstacleAvoidanceSimple_14.m  obstacleAvoidanceSimple_2.m  obstacleAvoidanceSimple_3.m  obstacleAvoidanceSimple_6.m
forcesLib/simpleMPC/simplempc/: simplempc.m
forcesLib/simpleMPC/simplempc/include/: simplempc.h
forcesLib/sphereMPC/: .gitignore  createSphereMpc.m  generatePMapSpheres.m  solveSphereMM.m
include/: acado_converter.h  decomp.h  decomp_node.h  definitions_mm_mpc.h  definitions_mm_mpc_static_spheres.h  forces_converter.h  mpcPlanner.h  mpcSpherePlanner.h  mpc_acado.h  mpc_acado_solver.h  mpc_action_server.h  mpc_forces_solver.h  mpc_interface.h  mpc_problem.h
launch/: helpers.launch  laser_assembler.launch  localization.launch  mmrobot_gazebo_mpc.launch  mpc_base.launch  mpc_client.launch  mpc_components.launch  mpc_decomp.launch  mpc_demo.launch  mpc_empty_world.launch  mpc_gazebo.launch  mpc_mm.launch  mpc_planner.launch  mpc_test.launch  simpleMpc_planner.launch  sphere_planner.launch
maps/: mpc_test_world.yaml
maps/empty_world/: empty_world_map.pgm  empty_world_map.yaml
msg/: DynamicObstacleMsg.msg  LinearConstraint3D.msg  LinearConstraint3DArray.msg  NurbsEval2D.msg  ObjectMsg.msg  SingleStaticSphere.msg  SolverInfo.msg  StaticSphereMsg.msg
scripts/: curStatePublisherMM  demo_mpc  errorComputer  globalPlanTracker  global_plan_subscriber.py  graspingClient  mpcAccActionServer  mpcActionClient  mpcActionServer  mpcWithGlobalPlanner  mpc_base_node.py  mpc_mm_node.py  mpc_simple  obstacleFeed  robotSphereTracker  send_mpc_base_goal.py  send_mpc_mm_goal.py  simpleMpcActionClient
src/: acado_converter.cpp  decomp.cpp  decomp_node.cpp  forces_converter.cpp  laser_scan_assembler.cpp  mpcPlanner.cpp  mpcSpherePlanner.cpp  mpc_acado.cpp  mpc_acado_solver.cpp  mpc_action_client.cpp  mpc_action_server.cpp  mpc_forces_solver.cpp  mpc_interface.cpp  mpc_node.cpp  mpc_node_pro.cpp  mpc_problem.cpp  mpc_solver.cpp
src/mobile_mpc/: .gitignore  solve_MPC_mm.py
test/: acado_converter_test.cpp  forces_converter_test.cpp  mpc_acado_solver_test.cpp  mpc_forces_solver_test.cpp  mpc_problem_test.cpp
world/: five_spheres.urdf.xacro  mpc_test_world.urdf.xacro  twenty_spheres.urdf.xacro
(+31 files in other folders)
